--- a/app/src/main/res/layout/activity_data_output_file.xml
+++ b/app/src/main/res/layout/activity_data_output_file.xml
@@ -47,10 +47,24 @@
         android:layout_height="50dp">
         
         <ImageView
+            android:id="@+id/img_folder"
             android:layout_width="24dp"
             android:layout_height="20dp"
             android:layout_marginLeft="15dp"
             android:src="@mipmap/migration_output_file_folder"/>
+
+        <HorizontalScrollView
+            android:scrollbars="none"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/ll_title"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </HorizontalScrollView>
 
 
     </LinearLayout>
