--- a/app/src/main/res/layout/dialog_output_file_progress.xml
+++ b/app/src/main/res/layout/dialog_output_file_progress.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="260dp"
+    android:layout_width="200dp"
     android:gravity="center"
     android:background="@drawable/bg_dialog_migration_file"
     android:layout_height="120dp">
 
+    <com.syezon.note_xh.view.refreshview.progressindicator.AVLoadingIndicatorView
+        android:id="@+id/avloading"
+        app:indicator="LineScale"
+        app:indicator_color="?attr/custom_actionbar_color"
+        android:layout_width="80dp"
+        android:layout_height="50dp" />
+
     <TextView
         android:id="@+id/tv"
         android:textSize="14sp"
+        android:layout_marginTop="15dp"
         android:text="正在压缩..."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
