--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -51,4 +51,11 @@
     <!--<attr name="wenjianjia_background" format="reference"></attr>-->
     <!--<attr name="wenjianjia_pink_background" format="reference"></attr>-->
 
+    <declare-styleable name="SwipeItemLayout.Layout">
+        <attr name="layout_itemType">
+            <flag name="main" value="0x01"/>
+            <flag name="menu" value="0x02"/>
+        </attr>
+    </declare-styleable>
+
 </resources>
