--- a/app/src/main/res/drawable/bg_output_anim.xml
+++ b/app/src/main/res/drawable/bg_output_anim.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="100dp"/>
-    <solid android:color="#ebfaf8"/>
+    <solid android:color="#9a94e1d7"/>
 
 </shape>
