--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -14,49 +14,48 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <RelativeLayout
+            android:id="@+id/rl_addnote_top"
             style="@style/my_actionbar_style"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/ActionBarHeight"
-            android:background="?attr/custom_actionbar_color"
-            android:id="@+id/rl_addnote_top">
+            android:layout_height="@dimen/ActionBarHeight">
 
             <ImageView
+                android:id="@+id/iv_cancel"
                 android:layout_width="@dimen/ActionBarHeight"
                 android:layout_height="match_parent"
-                android:scaleType="centerInside"
-                android:src="@mipmap/back"
-                android:id="@+id/iv_cancel"
-                android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:scaleType="centerInside"
+                android:src="@mipmap/img_back" />
 
             <Button
-                android:visibility="gone"
+                android:id="@+id/btn_save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/save"
-                android:textSize="15sp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
                 android:gravity="right|center_vertical"
                 android:paddingRight="13dp"
-                android:textColor="@android:color/white"
-                android:background="@android:color/transparent"
-                android:id="@+id/btn_save"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:text="@string/save"
+                android:textColor="@color/note_time"
+                android:textSize="18sp"
+                android:visibility="gone" />
 
             <TextView
+                android:id="@+id/tv_choose_sort"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableRight="@mipmap/xiangxia"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:drawablePadding="3dp"
                 android:text="@string/choose_sort"
-                android:textColor="@color/title_text_color"
-                android:textSize="@dimen/titlesize"
-                android:id="@+id/tv_choose_sort"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" />
+                android:textColor="@color/note_time"
+                android:textSize="@dimen/titlesize" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -71,7 +70,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:textColor="?attr/theme_color"
+                android:textColor="@color/note_text"
                 android:textSize="22sp"
                 android:gravity="center"
                 android:layout_width="wrap_content"
@@ -86,120 +85,252 @@
                 android:singleLine="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
                 android:layout_centerVertical="true"
                 android:background="@null"
-                android:textSize="15sp"
-                android:textColor="@color/mydark2"
-                android:hint="@string/input_title"
+                android:textSize="18sp"
+                android:textColor="@color/note_title"
+                android:hint="@string/input_title2"
+                android:gravity="center"
                 android:textColorHint="@color/hintcolor"
                 android:id="@+id/et_addnote_title"
-                android:layout_toLeftOf="@+id/tv_weather"
-                android:layout_toStartOf="@+id/tv_weather" />
+                 />
 
         </RelativeLayout>
 
         <LinearLayout
-            android:visibility="gone"
             android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:id="@+id/ll_weather"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <TextView
-                android:textSize="22sp"
-                android:gravity="center"
-                android:id="@+id/tv_leidian"
-                android:text="@string/leidian"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textSize="22sp"
-                android:gravity="center"
-                android:id="@+id/tv_xiaoyu"
-                android:text="@string/xiaoyu"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textSize="22sp"
-                android:gravity="center"
-                android:id="@+id/tv_xue"
-                android:text="@string/xue"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
 
-            <TextView
-                android:textSize="22sp"
-                android:gravity="center"
-                android:id="@+id/tv_duoyun"
-                android:text="@string/duoyun"
-                android:layout_weight="1"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textSize="22sp"
-                android:gravity="center"
-                android:id="@+id/tv_qingtian"
-                android:text="@string/qingtian"
                 android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textSize="22sp"
+                    android:gravity="center"
+                    android:id="@+id/tv_qingtian"
+                    android:textColor="@color/note_text"
+                    android:text="@string/qingtian"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:textSize="12sp"
+                    android:gravity="center"
+                    android:layout_marginTop="2dp"
+                    android:text="晴"
+                    android:textColor="@color/note_text"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+            <View
+                android:background="@color/note_text"
+                android:layout_width="1px"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_height="match_parent"/>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:textSize="22sp"
+                    android:gravity="center"
+                    android:id="@+id/tv_yin"
+                    android:text="@string/tianqi"
+                    android:textColor="@color/note_text"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+                <TextView
+                    android:textSize="12sp"
+                    android:gravity="center"
+                    android:text="多云"
+                    android:textColor="@color/note_text"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+            <View
+                android:background="@color/note_text"
+                android:layout_width="1px"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_height="match_parent"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:textSize="22sp"
+                    android:gravity="center"
+                    android:id="@+id/tv_duoyun"
+                    android:text="@string/duoyun"
+                    android:textColor="@color/note_text"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:textSize="12sp"
+                    android:gravity="center"
+                    android:text="阴"
+                    android:textColor="@color/note_text"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+            </LinearLayout>
+
+            <View
+                android:background="@color/note_text"
+                android:layout_width="1px"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_height="match_parent"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:textSize="22sp"
+                    android:gravity="center"
+                    android:id="@+id/tv_xiaoyu"
+                    android:text="@string/xiaoyu"
+                    android:textColor="@color/note_text"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:textSize="12sp"
+                    android:gravity="center"
+                    android:text="雨"
+                    android:textColor="@color/note_text"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+            </LinearLayout>
+
+            <View
+                android:background="@color/note_text"
+                android:layout_width="1px"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_height="match_parent"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:textSize="22sp"
+                    android:gravity="center"
+                    android:id="@+id/tv_xue"
+                    android:text="@string/xue"
+                    android:textColor="@color/note_text"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:textSize="12sp"
+                    android:gravity="center"
+                    android:text="雷"
+                    android:textColor="@color/note_text"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+            </LinearLayout>
+
+            <View
+                android:background="@color/note_text"
+                android:layout_width="1px"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_height="match_parent"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:textSize="22sp"
+                    android:gravity="center"
+                    android:id="@+id/tv_leidian"
+                    android:text="@string/leidian"
+                    android:textColor="@color/note_text"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:textSize="12sp"
+                    android:gravity="center"
+                    android:text="雪"
+                    android:textColor="@color/note_text"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+            </LinearLayout>
+
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/ll_weather_describe"
-            android:visibility="gone"
-            android:layout_marginTop="2dp"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textSize="12sp"
-                android:gravity="center"
-                android:text="雷"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textSize="12sp"
-                android:gravity="center"
-                android:text="雨"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textSize="12sp"
-                android:gravity="center"
-                android:text="雪"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:textSize="12sp"
-                android:gravity="center"
-                android:text="多云"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:textSize="12sp"
-                android:gravity="center"
-                android:text="晴"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
     </LinearLayout>
 
 
     <View
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_width="wrap_content"
         android:layout_height="0.5px"
         android:background="@android:color/darker_gray"
@@ -209,7 +340,7 @@
         android:layout_alignParentStart="true" />
 
     <ScrollView
-        android:layout_margin="15dp"
+        android:layout_margin="20dp"
         android:layout_below="@+id/line"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -225,12 +356,13 @@
                 android:inputType="text|textMultiLine"
                 android:background="@null"
                 android:minLines="18"
+                android:lineSpacingExtra="12dp"
                 android:textSize="15sp"
-                android:textColor="@color/mydark"
+                android:textColor="@color/note_content"
                 android:gravity="top|start"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/input_content"
+                android:hint="@string/input_content2"
                 android:textColorHint="@color/hintcolor"
                 android:id="@+id/et_addnote_content"/>
         </LinearLayout>
@@ -266,7 +398,7 @@
             android:gravity="center"
             android:textSize="30sp"
             android:text="@string/carmer"
-            android:textColor="?attr/theme_color"
+            android:textColor="@color/note_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_addpic" />
@@ -274,7 +406,7 @@
         <TextView
             android:gravity="center"
             android:textSize="30sp"
-            android:textColor="?attr/theme_color"
+            android:textColor="@color/note_time"
             android:text="@string/editnote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -285,7 +417,7 @@
     <TextView
         android:gravity="center"
         android:textSize="30sp"
-        android:textColor="?attr/theme_color"
+        android:textColor="@color/note_time"
         android:text="@string/collect_null"
         android:layout_marginLeft="15dp"
         android:layout_marginBottom="15dp"
