--- a/app/src/main/res/layout/activity_data_output.xml
+++ b/app/src/main/res/layout/activity_data_output.xml
@@ -75,7 +75,7 @@
             <ImageView
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@mipmap/data_transfer_output"/>
+                android:src="@mipmap/data_import_file"/>
 
             <TextView
                 android:layout_marginTop="15dp"
