--- a/app/src/main/res/layout/activity_show_page.xml
+++ b/app/src/main/res/layout/activity_show_page.xml
@@ -151,7 +151,7 @@
                     android:layout_height="wrap_content" />
                 <TextView
                     android:id="@+id/tv_news"
-                    android:text="新闻"
+                    android:text="热点"
                     android:layout_marginLeft="10dp"
                     android:layout_centerInParent="true"
                     android:textSize="16sp"
