--- a/app/src/main/res/layout/dialog_download_hint.xml
+++ b/app/src/main/res/layout/dialog_download_hint.xml
@@ -12,13 +12,13 @@
         android:layout_height="70dp"
         android:gravity="center"
         android:text="确定打开：“天天头条” ?"
-        android:textColor="#000000"
+        android:textColor="#464646"
         android:textSize="16sp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="#909090"
+        android:background="#d4d4d4"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         />
@@ -41,7 +41,7 @@
             android:layout_width="1px"
             android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
-            android:background="#909090"/>
+            android:background="#d4d4d4"/>
 
         <TextView
             android:id="@+id/tv_ok"
